k8s/manifests/applications/dev/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: cjshore1996/dev-api-gateway:latest
          ports:
            - containerPort: 9000
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
#  type: NodePort
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
