k8s/manifests/applications/dev/component-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: component-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: component-service
  template:
    metadata:
      labels:
        app: component-service
    spec:
      containers:
        - name: component-service
          image: cjshore1996/dev-component-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: component-service
spec:
  selector:
    app: component-service
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
