k8s/manifests/applications/dev/listing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listing-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listing-service
  template:
    metadata:
      labels:
        app: listing-service
    spec:
      containers:
        - name: listing-service
          image: cjshore1996/dev-listing-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: listing-service
spec:
  selector:
    app: listing-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
