k8s/manifests/applications/dev/pc-builder-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pc-builder-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pc-builder-service
  template:
    metadata:
      labels:
        app: pc-builder-service
    spec:
      containers:
        - name: pc-builder-service
          image: cjshore1996/dev-pc-builder-service:latest
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: pc-builder-service
spec:
  selector:
    app: pc-builder-service
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
